fix: link group style
* fix different appearance of a.tobago-link and button.tobago-link
* this also fixes (accidentally)
** button.tobago-link size (because of invisible border)
** disabled button.tobago-link text-color was brighten up (because of opacity < 1)
* add a manual test example

--- a/tobago-core/npm/scss/_tobago.scss
+++ b/tobago-core/npm/scss/_tobago.scss
@@ -501,6 +501,9 @@ tobago-in {
 }
 
 tobago-links {
+  .nav .nav-item .nav-link {
+    padding: $nav-link-padding-y $nav-link-padding-x;
+  }
 }
 
 /* link ----------------------------------------------------------- */
@@ -539,10 +542,17 @@ button {
     @include buttonLinkDisabledCursor();
 
     padding: 0;
+    border: 0;
     vertical-align: baseline;
 
     &:focus {
       box-shadow: none;
+    }
+
+    &:disabled {
+      /* bootstrap reduce opacity for disabled buttons.
+      This results in a different text color for greyed out button.tobago-link */
+      opacity: 1;
     }
   }
 
